# csv-profile

./: README.md  pyproject.toml  repo_url.txt
src/csv_profile/: __init__.py  cli.py  profiler.py
