[project]
name = "csv-profile"
version = "0.1.0"
description = "A lightweight CLI tool to quickly profile and analyze CSV data health directly in the terminal."
readme = "README.md"
authors = [
    { name = "Amrutha Potluri", email = "165858302+amruthapotluri@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
csv-profile = "csv_profile.cli:main"
